--- a/Week02/02_ReadSpatialDataDK_exercise.Rmd
+++ b/Week02/02_ReadSpatialDataDK_exercise.Rmd
@@ -53,19 +53,16 @@ In this exercise you will read in three shapefiles (parks, playgrounds, and fore
 library(sf)
 
 # Read in the forests shapefile
-forests <- ___("../data/forests.shp")
+forests <- st_read("../data/forests.shp")
 
-# Read in the parks shapefile
-parks <- ___(___)
+parks <- st_read("../data/parks.shp")
 
-# Read in the playgrounds shapefile
-playgrounds <- ___(___)
+playgrounds <- st_read("../data/playgrounds4326.shp")
 
-# Read in the shelters json
-shelters <- ___(___)
+shelters <- st_read("../data/shelters.json")
 
-# View the first few features of all layers
-___(___)
+head(shelters)
+
 ```
 
 ## Questions: 
@@ -93,22 +90,20 @@ Spatial objects in `sf` are just data frames with some special properties. This 
 
 ```{r wrangle-parks, eval=FALSE, echo=TRUE}
 # Load the sf package
-___
+library(tidyverse)
+library(dplyr)
+library(sf)
 
-# ... and the dplyr package
-___
+large_parks_only <- filter(parks, areal_m2 > 50000) 
+
+nrow(parks)
+nrow(large_parks_only)
 
 # Use filter() to limit to over5ha parks
-___
-
-# Count the number of rows
-___(over5ha)
-
-# Limit to navn and areal_m2 variables
-over5_lim <- over5ha %>% ___(navn, areal_m2) 
+over5_lim <- large_parks_only %>% select(navn, areal_m2)
 
 # Use head() to look at the first few records
-___(over5_lim)
+head(over5_lim)
 ```
 
 Great! You can see why the `sf` package is so nice – your spatial objects are data frames that you can smoothly manipulate with `dplyr`. The number of parks over 5ha is 17
@@ -133,20 +128,20 @@ In this exercise, you will convert the data frame to what's called a `tibble` wi
 
 ```{r geometry, eval = FALSE, echo = TRUE}
 # Create a standard, non-spatial data frame with one column
-df <- ___(a = 1:3)
+df <- data.frame(a = 1:3)
 
 # Add a list column to your data frame
-df$b <- ___(1:4, 1:5, 1:10)
+df$b <- list(1:4, 1:5, 1:10)
 
 # Look at your data frame with head
-___(df)
+head(df)
 
 # Convert your data frame to a tibble and print on console
-___(df)
+as_tibble(df)
 
 # Pull out the third observation from both columns individually
-df$___[___]
-df$___[___]
+df$a[3]
+df$b[3]
 ```
 You now have a better sense of what a list column is. You can see how it can be used to store far more information in a single variable than other types of columns. These list-columns are how `sf` stores detailed geographic information on each feature in a single record. Converting the data frame to a tibble is not necessary but a tibble can provide a better print out of the object.
 
@@ -193,19 +188,19 @@ length(which(result > val))
 
 ```{r forests, eval=FALSE, echo=TRUE}
 # Compute the areas of the forests
-areas <- ___(forests)
+areas <- st_area(forests)
 
 # Create a quick histogram of the areas using hist
-___(___)
+hist(areas)
 
 # Filter to forests greater than 200000 (square meters)
-big_forests <- ___ %>% ___(___(___) > 200000)
+big_forests <- forests %>% filter(unclass(areas) > 200000)
 
 # Can you plot the big_forests with their names??(hint: check the plotting section in Task 5 below)
-
+plot(big_forests["navn"])
 
 # Plot just the geometry of big_forests
-___(___(big_forests))
+plot(st_geometry(big_forests))
 
 ```
 
@@ -230,19 +225,19 @@ Often, you also want to plot multiple spatial objects together to see if and how
 
 ```{r plotting-sf, eval=FALSE}
 # Plot the forests object using all defaults
-___(forests)
+plot(forests)
 
 # Plot just the areal_m2 attribute of the forests data
-___(forests[___])
+plot(forests["areal_m2"])
 
 # Create a new object of just the forests geometry
-forests_geo <- ___(forests)
+forests_geo <- st_geometry(forests)
 
 # Plot the geometry of the forests data
-___(forests_geo)
+plot(forests_geo)
 
 # Plot the geometry of the forests and the parks object together
-___(forests_geo, col = "_____");___(parks$geometry, col = _____, add = _____)
+plot(forests_geo, col = "green");plot(parks$geometry, col = "blue", add = TRUE)
 
 ```
 
@@ -270,25 +265,25 @@ Multi-band rasters will have more than one layer. An example is a color aerial p
 
 ```{r loadraster, eval=FALSE, echo=TRUE}
 # Load the raster package
-___(___)
+library(raster)
 
 # Read in the mound elevation single-band raster
-elevation <- ____(___)
+elevation <- raster("../data/DNK_msk_alt.grd")
 
 # Read in the orthophoto image multi-band raster
-aarhus <- brick(_____)
+aarhus <- brick("../data/Aarhus_1m.TIF")
 
 # Get the class for the new objects
-class(___)
-class(___)
+class(elevation)
+class(aarhus)
 
 # Identify how many layers each object has
-nlayers(___)
-nlayers(___)
+nlayers(elevation)
+nlayers(aarhus)
 
 # Identify the resolution of each raster
-___(elevation)
-___(aarhus)
+str(elevation)
+str(aarhus)
 ```
 
 *Questions:*
@@ -311,14 +306,16 @@ Instead of storing raster objects in data frames, the `raster` package stores sp
 
 ```{r load raster, eval=FALSE, echo=TRUE}
 # Get the extent of the elevation and aarhus object
-___(___)
+extent(elevation)
+extent(aarhus)
 
 # Get the CRS of the aarhus and elevation object
-___(___)
+crs(elevation)
+crs(aarhus)
 
 # Determine the number of grid cells in both raster objects
-___(aarhus)
-___(elevation)
+ncell(aarhus)
+ncell(elevation)
 ```
 
 
@@ -341,17 +338,17 @@ The raster package has added useful methods for plotting both single and multi-b
 
 ```{r plot raster, eval=FALSE, echo=TRUE }
 # Plot the elevation raster (single raster)
-___
+plot(elevation)
 
 # Plot the aarhus raster (as a single image for each layer)
-___
+plot(aarhus)
 
 # Plot the aarhus raster as an image
-____
+plotRGB(aarhus, stretch = "lin")
 
 
 # Plot the two images together (on top of one another). Hint: it only works if their CRSes are compatible. Return to this after Task 9 and 10 if the CRSes are different.
-____
+
 ```
 
 
@@ -374,19 +371,19 @@ When the geographic data you read in with `sf` already has a CRS defined both `s
 
 ```{r crs, eval=FALSE}
 # Determine the CRS for the elevation and playgrounds vector objects
-___(forests)
-___(playgrounds)
+st_crs(forests)
+st_crs(playgrounds)
 
 # Assign the CRS to playgrounds
-crs_1 <- _____
-___(playgrounds) <- crs_1
+crs_1 <- 4326
+st_crs(playgrounds) <- crs_1
 
 # Determine the CRS for the aarhus and elevation rasters
-___(aarhus)
-___(elevation)
+crs(aarhus)
+crs(elevation)
 
 # Write here the proj4string for the aarhus layer
-crs_2 <- "___"
+crs_2 <- "+proj=utm +zone=32 +ellps=GRS80 +units=m +no_defs"
 
 ```
 
@@ -411,17 +408,17 @@ Note that you will use `method = "ngb"` in your call to `projectRaster()` to pre
 
 ```{r crs-assign, eval=FALSE}
 # Get the CRS from the aarhus object
-the_crs <- ___(aarhus, asText = TRUE)
+the_crs <- crs(aarhus, asText = TRUE)
 
 # Project playgrounds to match the CRS of aarhus
-playgrounds_crs <- ___(playgrounds, crs = ___)
+playgrounds_crs <- st_transform(playgrounds, crs = the_crs)
 
 # Project elevation to match the CRS of aarhus
-elevation_crs <- ___(elevation, crs = ___, method = "ngb")
+elevation_crs <- projectRaster(elevation, crs = the_crs, method = "ngb")
 
 # Look at the CRS to see if they match
-___(playgrounds_crs)
-___(elevation_crs)
+st_crs(playgrounds_crs)
+crs(elevation_crs)
 
 
 ```
@@ -447,11 +444,17 @@ Make sure `sf`, `raster` and `tmap` are loaded in your workspace.
 ```{r plot, eval=FALSE}
 # Plot aarhus and playgrounds (run both lines together)
 # Do you see the playgrounds?
-___(aarhus, stretch = "lin")
-___(playgrounds, add = TRUE)
+the_crs <- crs(aarhus, asText = TRUE)
+playgrounds_crs <- st_transform(playgrounds, crs = the_crs)
 
+plotRGB(aarhus, stretch = "lin", alpha = 100)
+plot(playgrounds_crs, col = "green", lwd = 3, add = TRUE)
+
+
+st_crs(playgrounds_crs)
 
 # Simply run the tmap code
+install.packages("tmap")
 library(tmap)
 tm_shape(aarhus) + 
     tm_rgb() + 
@@ -488,9 +491,12 @@ In the case of GADM you must also provide the level of administrative subdivisio
 ## Examples
 ```{r getData, eval = FALSE}
 library(raster)
+getData("ISO3")
 elevation <- getData("alt", country = "DNK", mask = TRUE)
 municipalities <- getData("GADM", country = "DNK", level = 2)
 DK_border <- getData("GADM", country = "DNK", level = 0)
+
+plot(DK_border)
 
 ```
 
