--- a/Week03/03_CRSandMaps_exercise.Rmd
+++ b/Week03/03_CRSandMaps_exercise.Rmd
@@ -80,20 +80,20 @@ counties <- readRDS("../data/gadm36_DNK_2_sp.rds")
 
 # starting a static map
 tm_shape(elevation)  +
-  tm_raster(title = "elev", 
+  tm_raster(title = "Elevation (masl)", 
             style = "cont",
-            palette = "BuGn") +
+            palette = "-RdYlGn") +
   tm_shape(counties) +
-  tm_borders(col = "red", 
-             lwd = 3) +
-  tm_scale_bar(breaks = c(0, 100, 200),
-               text.size = 1) +
-  tm_compass(position = c("LEFT", "center"),
+  tm_borders(col = "black", 
+             lwd = 1) +
+  tm_scale_bar(breaks = c(0, 50, 100, 150, 200),
+               text.size = 1, position = c('RIGHT', 'TOP')) +
+  tm_compass(position = c("RIGHT", "TOP"),
              type = "rose", 
              size = 2) +
-  tm_credits(text = "A. Sobotkova, 2024") +
-  tm_layout(main.title = "My terrible map",
-            bg.color = "orange",
+  tm_credits(text = "G.H. Andersen, 26-02-2024") +
+  tm_layout(main.title = "Denmark municipalities",
+            bg.color = "white",
             inner.margins = c(0, 0, 0, 0))
 ```
 
@@ -160,10 +160,10 @@ Tabular data contain spatial data, that you can use to convert these tibbles int
 ```{r st-as-sf, eval = FALSE}
 
 places_sf <- places %>% 
-  filter(!is.na(_________)) %>% 
-  st_as_sf(coords = ____(__________,________))
+  filter(!is.na(places$CoordinatesFILLTHIS)) %>% 
+  st_as_sf(coords = c("Latitude", "Longitude"))
 
-nitrates_sf <- _______(nitrates, wkt = __________)
+nitrates_sf <- st_as_sf(nitrates, wkt = "WKT")
 
 ```
 
@@ -196,8 +196,29 @@ What can you say about the content of this file?
 
 ```{r inspect-data}
 # /Start Code / #
+# can use View, str, show, head, or plot functions to inspect the data
+show(places_sf)
+show(nitrates_sf)
+# i assume all columns that are NOT geometry can be considered attributes?
+head(places_sf)
+head(nitrates_sf)
+# both use point it seems
+st_crs(places_sf)
+st_crs(nitrates_sf)
+# neither have a defined CRS it seems, not sure if you can get the proj string or not
 
+show(elevation)
+# rasterlayer class, think it might mean single, but not sure.
+# uses WGS84, has a prof string.
+# think it might have 0 attributes?
+# dims look like this 396, 876, 346896  (nrow, ncol, ncell)
+# the resolution is defined as 0.008333333, 0.008333333. not sure what that means
+# maybe we can if we convert places & nitrates to the same CRS as elevation
 
+plot(places_sf$geometry)
+plot(nitrates_sf$WKT)
+
+plot(elevation)
 # /End Code/ #
 ```
 
@@ -219,9 +240,9 @@ Look at the coordinates in `places` and `nitrates`again. While both refer to pla
 ```{r define-crs, eval = FALSE}
 # /Start Code / #
 
-places4326 <- places_sf %>% st_set_crs(_________)
+places4326 <- places_sf %>% st_set_crs(4326)
 
-nitrates25832 <- nitrates_sf %>% _________(________)
+nitrates25832 <- nitrates_sf %>% st_set_crs(25832)
 
 places4326
 nitrates25832
@@ -254,7 +275,16 @@ Remember that you use `st_transform()` to reproject vector data, and `projectRas
 
 ```{r reproject-crs}
 # /Start Code / #
+nitrates_4326 <- nitrates25832 %>% st_transform(crs = 4326)
 
+plot(nitrates_4326$WKT)
+plot(places4326$geometry, lwd=10, col="green", add = TRUE)
+
+elevation_25832 <- projectRaster(elevation, crs = "+init=epsg:25832")
+places_25832 <- st_transform(places4326, crs = 25832)
+
+plot(elevation_25832)
+plot(nitrates25832$WKT, lwd=1, add = TRUE)
 
 # /End Code/ #
 ```
