update exercise work

--- a/Week04/04_SpatialJoinsFortidsminderDK_exercise.Rmd
+++ b/Week04/04_SpatialJoinsFortidsminderDK_exercise.Rmd
@@ -40,31 +40,31 @@ In this task, you will find out which municipality in Denmark has the most Vikin
 ```{r monuments-dk, eval=FALSE}
 
 # Load the monuments into R
-monuments <- read_sf(" _________")
+monuments <- read_sf("04_fortidsminder/anlaeg_all_25832.shp")
 
 
 # Check the periodisation and type of the monuments
-_____(monuments$datering)
-_____(monuments$anlaegsbet)
+head(monuments$datering)
+head(monuments$anlaegsbet)
 
 # Filter Viking-era finds
 viking <- monuments %>% 
-  _____(___________)
+  dplyr::filter(datering == 'Vikingetid')
 
 # Prepare municipalities
-library(_______)
-municipalities <-  getData(__________)
-municipalities_25832 <- municipalities %>% 
-  st_as_sf(_______)
+library(raster)
+municipalities <-  getData("GADM", country = "DNK", level = 2)
 
+municipalities_25832 <- municipalities %>% 
+  st_as_sf(25832) %>% 
+    st_transform(25832)
 
 # Plot the monuments on top of the municipalities
-plot(_________(municipalities_25832))
-plot(_________, add = TRUE, pch = 16, col = "red")
+plot(st_geometry(municipalities_25832))
+plot(st_geometry(viking), add = TRUE, pch = 16, col = "red")
 ```
 
 Great! The monuments object did not have municipality information until you performed the spatial join with `st_join()`. Now that the municipality information is included you can supply each municipality office with the count and coordinates of monuments they are in charge of so they can monitor and safeguard.
-
 
 
 # Task 2: Spatial joins - monuments and municipalities
@@ -83,30 +83,36 @@ Importantly, the `st_join()` function requires `sf` data frames as input and wil
 ```{r monuments-munic, eval=FALSE}
 # Determine whether viking monuments has class data.frame
 class(viking)
+class(municipalities_25832)
 
 # Join the viking monuments with the municipalities
-viking_neigh <- ________(viking, municipalities_25832)
+viking_neigh <- st_join(viking, municipalities_25832)
 
 # Confirm that viking_neigh has the municipality information
 head(viking_neigh)
 
 # Calculate the count of monuments per municipality
 viking_neigh %>% 
-  group_by(________) %>% 
+  group_by(NAME_2) %>% 
   tally() %>% 
-  arrange(____(__)) 
+  arrange(desc(n)) 
 
 # Create an object with 5 of the least populated municipalities
 least <- viking_neigh %>% 
-  group_by(________) %>% 
+  group_by(NAME_2) %>% 
   tally() %>% 
-  arrange(__) %>%
-  _____(1:5)
-  
+  arrange(n) %>%
+  slice(1:5)
+
+most_viking <- viking_neigh %>% 
+  group_by(NAME_2) %>% 
+  tally() %>% 
+  arrange(desc(n)) %>%
+  slice(1:5)
   
 # Plot the municipalities with fewest Viking finds in red over DK municipalities
-plot(__________, col = "grey", border = "white")
-plot(municipalities_25832[_________(___________(least, municipalities_25832, sparse = FALSE)), ]$geometry, col = "red", add = T) 
+plot(least, col = "grey", border = "white")
+plot(municipalities_25832[st_intersects(st_join(least, municipalities_25832, sparse = FALSE))]$geometry, col = "red", add = T) 
 
 ```
 
@@ -135,12 +141,13 @@ A note about the output of functions that test relationships between two sets of
 
 ```{r intersect, eval=FALSE}
 # Load objects
-parks
+parks <- read_sf("../data/parks.shp")
 viking
 
 
 # Create a 10km buffer around Nobelparken (see Week 03 Task 01 for guidance) 
 nb <- data.frame(________, _________, ________)
+
 nb_buf <- nb %>% 
   st_as_sf(________________, crs = _____) %>% 
   ______________ %>% 
